--- a/style.css
+++ b/style.css
@@ -43,3 +43,15 @@ main {
   align-self: auto;
   width: 675px;
 }
+
+#input-name-and-lastname { /* Requisito 9 */
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+#input-email-and-house { /* Requisito 10 */
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
