--- a/style.css
+++ b/style.css
@@ -48,6 +48,11 @@ main {
   flex-direction: row;
 }
 
+#family {
+  display: flex;
+  flex-direction: column;
+}
+
 #input-email-and-house { /* Requisito 11 */
   display: flex;
   flex-direction: row;
@@ -60,5 +65,4 @@ main {
 
 #rate {
   display: flex;
-  flex-direction: row;
 }
