--- a/style.css
+++ b/style.css
@@ -3,4 +3,9 @@
     display: flex;
     height: 50px;
     length: auto;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.trybewarts-login{
+    display:flex;
 }
