--- a/style.css
+++ b/style.css
@@ -1,11 +1,17 @@
 .header{
     background-color: rgb(50, 167, 145);
     display: flex;
-    height: 50px;
+    height: 80px;
     length: auto;
     flex-direction: row;
     justify-content: space-between;
 }
 .trybewarts-login{
     display:flex;
+    align-items: center;
+}
+#trybewarts-header-title {
+    display: flex;
+    align-items: center;
+    color: white;
 }
