--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 .header{
     background-color: rgb(50, 167, 145);
     display: flex;
-    height: 80px;
-    length: auto;
+    height: 65px;
+    width:  auto;
     flex-direction: row;
     justify-content: space-between;
 }
@@ -14,4 +14,13 @@
     display: flex;
     align-items: center;
     color: white;
+}
+.main {
+    display: flex;
+    align-items: flex-start;
+    
+}
+#evaluation-form {
+    display: flex;
+    width: 675px;
 }
