Adiciona os requisitos 1 ao 4

--- a/style.css
+++ b/style.css
@@ -1,8 +1,53 @@
-main {
+* {
+  margin: 0;
+  padding: 0;
+}
+
+#main {
+  display: flex;
+  flex-direction: row;
+}
+
+.header {
+  background-color: rgb(50, 167, 145);
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+  max-height: 100px;
+}
+
+.forms {
+  display: flex;
+  flex-direction: column;
+  margin-right: 20px;
+  align-items: center;
+  justify-content: center;
+}
+
+.trybewarts-login {
   display: flex;
 }
-#evaluation-form {
+
+.email-house {
   display: flex;
-  width: 675px;
-  flex-direction: column;
+  flex-direction: row;
+}
+
+#header-logo {
+  max-width: 75px;
+  max-height: 75px;
+}
+
+#trybewarts-header-title {
+  display: flex;
+  margin-top: auto;
+}
+
+#log-in-email {
+  display: inline-flex;
+}
+
+#log-in-password {
+  display: inline-flex;
 }
