--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 * {
   margin: 0px;
 }
-#header{
+
+.header {
   display: flex;
   flex-direction: row;
   background-color: rgb(50, 167, 145);
@@ -10,33 +11,52 @@
   align-items: center;
 
 }
-.trybewarts-header-logo { 
-    display: flex;
-    max-height: 125px;
+
+.trybewarts-header-logo {
+  display: flex;
+  max-height: 125px;
 }
 
 #trybewarts-header-title {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
-#trybewarts-login{
-  display:flex;
+
+.trybewarts-login {
+  display: flex;
   min-height: 75px;
 }
 
-#evaluation-form { /* formulário do corpo */
-display: flex;
-width: 675px;
-flex-direction: column; /* alinha o eixo principal para o eixo vertical */
+#evaluation-form {
+  /* formulário do corpo */
+  display: flex;
+  width: 675px;
+  flex-direction: column;
+  /* alinha o eixo principal para o eixo vertical */
 }
+
 main {
-display: flex;
+  display: flex;
 }
-#trybewarts-forms-logo { /* logo da TrybeWarts */
-    display: flex;
-    height: 500px;
+
+#trybewarts-forms-logo {
+  /* logo da TrybeWarts */
+  display: flex;
+  height: 500px;
 }
 
 .login-input {
   margin-left: 10px;
+}
+
+#evaluation-form{
+    display: flex;
+}
+
+.nome-sobren {
+    display: flex;
+}
+
+.email-casa {
+    display: flex;
 }
