--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ header {
   margin-right: 20px;
   align-items: center;
   justify-content: center;
+  width: 675px;
 }
 
 .trybewarts-login {
@@ -47,14 +48,14 @@ header {
 }
 
 #trybewarts-forms-logo {
-  height: 500px;  
+  width: 675px; 
 }
 
 main {
   display: flex;  
   align-items: center;
   align-content: center;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 #evaluation-form {
@@ -93,5 +94,5 @@ main {
 }
 
 #trybewarts-forms-logo {
-  height: 500px;  
+  height: 675px;
 }
