--- a/style.css
+++ b/style.css
@@ -1,4 +1,20 @@
+*{
+	margin: 0;
+	padding: 0;
+}
 .header {
 	background-color: rgb(50, 167, 145);
 	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.trybewarts-login {
+	display: flex;
+	margin-right: 100px;
+}
+
+.trybewarts-header-logo {
+	width: 50px;
+	height: 50px;
 }
