--- a/style.css
+++ b/style.css
@@ -1,41 +1,44 @@
-*{
-	margin: 0;
-	padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
+
 .header {
-	background-color: rgb(50, 167, 145);
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
+  background-color: rgb(50, 167, 145);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .trybewarts-login {
-	display: flex;
-	margin-right: 100px;
+  display: flex;
+  margin-right: 100px;
 }
 
 .trybewarts-header-logo {
-	width: 50px;
-	height: 50px;
+  width: 50px;
+  height: 50px;
 }
 
 #trybewarts-header-title {
-	color: beige;
+  color: beige;
 }
 
-#evaluation-form{
-	display: flex;
-	width: 675px;
-	flex-direction: column;
+#evaluation-form {
+  display: flex;
+  width: 675px;
+  flex-direction: column;
 }
+
 main {
-	display: flex;
-}
-#trybewarts-forms-logo img {
-	height: 500px;
+  display: flex;
 }
 
-img#trybewarts-forms-logo {
- height: 400px;
- width: 400px;
+#trybewarts-forms-logo img {
+  height: 500px;
+}
+
+#trybewarts-forms-logo {
+  height: 400px;
+  width: 400px;
 }
