Revert "Brian yan trybe award"

--- a/style.css
+++ b/style.css
@@ -1,20 +1,10 @@
-* {
-  margin: 0px;
-}
-
 .header {
   display: flex;
   background-color: rgb(50, 167, 145);  
   min-height: 100px;
-  background-color: rgb(50, 167, 145);     
-  max-height: 100px;   
-  justify-content: space-between;
+  border: solid 1px;  
+  justify-content: space-around;
   align-items: center;
-}
-
-.trybewarts-header-logo{
-  display: flex;
-  max-height: 100px;
 }
 
 #form1{
@@ -75,7 +65,8 @@
 .familia{  
   display: flex;   
   min-width: 500px;
-  justify-content: space-around;  
+  justify-content: space-around;
+  
 }
 
 hr{
@@ -92,7 +83,7 @@ width: 500px;
 .card2{
   display: flex;   
   flex-wrap: wrap;
-  max-width: 250px;  
+  max-width: 290px;  
 }
 
 .radio{
@@ -103,11 +94,12 @@ width: 500px;
 
 .checkbox{
   display: flex;
-  margin: 7px 7px; 
+  margin: 7px 7px 7px -4px; 
 }
 
-.opniao{   
-  font-size: 14px;
+.opniao{
+  border:  solid 1px;
+  
 }
 
 .comentarios{
@@ -116,7 +108,7 @@ flex-direction: column;
 }
 
 #textarea{
-  width: 60ch;
+  width: 40ch;
   height: 10ch;
 }
 
