c5 - Adiciona um forms ao corpo da pagina

--- a/style.css
+++ b/style.css
@@ -11,3 +11,12 @@
 .trybewarts-login {
   display: flex;
 }
+
+main {
+  display: flex;
+}
+
+#evaluation-form {
+  display: flex;
+  width: 675px;
+}
