c7 - Adiciona o logo da Trybewarts ao lado do forms no body.

--- a/style.css
+++ b/style.css
@@ -19,4 +19,9 @@ main {
 #evaluation-form {
   display: flex;
   width: 675px;
+  flex-direction: column;
+}
+
+#trybewarts-forms-logo {
+  height: 500px;
 }
