--- a/style.css
+++ b/style.css
@@ -41,3 +41,12 @@ main {
 .purpler {
   background-color: slateblue;
 }
+
+main .form-control {
+  border: solid rgba(169, 169, 169, 0.58);
+}
+
+.form-select {
+  border: solid rgba(169, 169, 169, 0.58);
+  width: 278px;
+}
